infra/k8s/streaming/002-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shaka-packager
  namespace: streaming
spec:
  selector:
    matchLabels:
      app: shaka-packager
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: shaka-packager
    spec:
      shareProcessNamespace: true # so shaka can killall ffmpeg on failure
      restartPolicy: Always
      volumes:
      - name: shared-data
        emptyDir: {}
      - name: nginx-config
        configMap:
          name: nginx-config
      containers:
      - name: ffmpeg
        image: jrottenberg/ffmpeg:4.1-alpine
        command: [ "/bin/sh", "-c", "sleep 15s; ffmpeg $FFMPEG_OPTIONS -i $SOURCE_URL $ENCODING_OPTIONS"]
      - name: shaka-packager
        image: google/shaka-packager:release-v2.4.2
        command: ["/bin/sh", "-c", "killall -9 ffmpeg; sleep 2s; packager $ARGUMENTS"]
        workingDir: /stream
        volumeMounts:
        - name: shared-data
          mountPath: /stream
      - name: nginx
        image: nginx
        volumeMounts:
        - name: shared-data
          mountPath: /usr/share/nginx/html
        - name: nginx-config
          mountPath: /etc/nginx/conf.d
        ports:
        - containerPort: 80
