infra/k8s/streaming/003-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: shaka-packager
  namespace: streaming
spec:
  type: ClusterIP
  selector:
    app: shaka-packager
  ports:
    - protocol: TCP
      port: 80
      name: web
